Added "uploaded_by" to event_tracks, displaying uploaded by .. at in results modal

--- a/app/views/events/_result_modal.haml
+++ b/app/views/events/_result_modal.haml
@@ -29,6 +29,11 @@
             .col-sm-6
               %a.text-danger#rm-delete{href: '#'}
                 = 'Delete result'
+          .form-group#group-track-uploaded
+            .col-sm-2
+              %span.control-label= 'Uploaded:'
+            .col-sm-10
+              %span#rm-track-uploaded
 
           #rm-new-track
             .form-group.top-buffer
