--- a/app/assets/stylesheets/ajax_error_message.css
+++ b/app/assets/stylesheets/ajax_error_message.css
@@ -14,6 +14,10 @@
   z-index: 9999;
 }
 
+#ajax-error-message-text {
+  white-space: pre-wrap;
+}
+
 .flash {
   padding: 15px;
   border-radius: 3px;
