Fix update action and edit view

--- a/app/views/user_profiles/edit.html.haml
+++ b/app/views/user_profiles/edit.html.haml
@@ -11,7 +11,7 @@
         = f.text_field :name, autofocus: true, class: 'form-control'
 
     .form-group
-      = f.label t('activerecord.attributes.user_profile.photo'), class: 'col-sm-2 control-label', :for => :userpic
+      = f.label t('activerecord.attributes.user_profile.userpic'), class: 'col-sm-2 control-label', :for => :userpic
       .col-sm-4
         = f.file_field :userpic
 
