--- a/app/views/static_pages/manage.html.haml
+++ b/app/views/static_pages/manage.html.haml
@@ -18,13 +18,13 @@
       %p
         = link_to 'События', events_path
       %p
-        = link_to 'Участники', competitors_path
+        -# = link_to 'Участники', competitors_path
       %p
-        = link_to 'Раунды', rounds_path
+        -# = link_to 'Раунды', rounds_path
       %p
-        = link_to 'Секции', sections_path
+        -# = link_to 'Секции', sections_path
       %p
-        = link_to 'Результаты', event_tracks_path
+        -# = link_to 'Результаты', event_tracks_path
 
       %h2= 'Онлайн соревнования'
       %p
