--- a/app/views/events/_result_modal.haml
+++ b/app/views/events/_result_modal.haml
@@ -1,11 +1,11 @@
-.modal.fade#result-form-modal{:tabindex => '-1', :role => 'dialog', :aria => {:labelledby => 'myModalLabel', :hidden => 'true'}}
+.modal.fade#result-form-modal{tabindex: '-1', role: 'dialog', aria: {labelledby: 'myModalLabel', hidden: 'true'}}
   .modal-dialog
     .modal-content
-      %form.form-horizontal#result-form{:action => '#', :role => 'form'}
+      %form.form-horizontal#result-form{action: '#', role: 'form'}
 
         .modal-header
-          %button.close{:type => 'button', :data => {:dismiss => 'modal'}}
-            %span{:aria => {:hidden => 'true'}}
+          %button.close{type: 'button', data: {dismiss: 'modal'}}
+            %span{aria: {hidden: 'true'}}
               &times;
             %span.sr-only
               Close
@@ -13,34 +13,31 @@
 
         .modal-body
           .form-group
-            .col-sm-2
-              %span.control-label= 'Competitor:'
+            %span.col-sm-2.control-label= t('events.show.competitor') + ':'
             .col-sm-4
-              %span#rm-competitor-name
+              %span#rm-competitor-name.form-label
             .col-sm-2
-              %span#rm-track-label.control-label= 'Track:'
+              %span#rm-track-label.control-label= t('events.show.track') + ':'
             .col-sm-4
               %a#rm-track-link
           .form-group
-            .col-sm-2
-              %span.control-label= 'Round:'
+            %span.col-sm-2.control-label= t('events.show.round') + ':'
             .col-sm-4
               %span#rm-round-name
             .col-sm-6
               %a.text-danger#rm-delete{href: '#'}
-                = 'Delete result'
+                = t('events.show.delete_result')
           .form-group#group-track-uploaded
-            .col-sm-2
-              %span.control-label= 'Uploaded:'
+            %span.col-sm-2.control-label= t('events.show.track_upoaded') + ':'
             .col-sm-10
               %span#rm-track-uploaded
 
           #rm-new-track
             .form-group.top-buffer
-              %span.col-sm-2.control-label= 'Track:'
+              %span.col-sm-2.control-label= t('events.show.track') + ':'
               .col-sm-10
                 .input-group.track-file-group
-                  %input.form-control.track-file-name{:type => "text", :readonly => true}
+                  %input.form-control.track-file-name{type: "text", readonly: true}
                   %span.input-group-btn
                     %span.btn.btn-default.btn-file
                       Browse&hellip; 
@@ -48,9 +45,8 @@
                 %select.form-control.result-track#result-track{name: 'track_id'}
               .col-sm-10.col-sm-offset-2
                 %span
-                  %span.toggle-track-caption= "Or"
-                  %a.toggle-track{href: '#'}= 'select existed track?'
+                  %span.toggle-track-caption= t('events.show.result_or')
+                  %a.toggle-track{href: '#'}= t('events.show.result_select')
         .modal-footer
           %button.btn.btn-success#rm-save= t 'general.save'
-          %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}= t 'general.cancel'
-
+          %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t 'general.cancel'
