--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Places controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.place-map-description {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  color: #fafafa;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.place-map-background {
+  padding-top: 20px;
+  background-color: rgba(53, 53, 84, 0.4);
+  height: 100%;
+  width: 100%;
+  padding-left: 20px;
+}
+.place-map img {
+  width: 100%;
+}
