--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -8,6 +8,7 @@
   height: 100%;
   width: 100%;
   color: #fafafa;
+  text-shadow: rgba(0, 0, 0, 0.8) 3px 3px 2px;
   padding-left: 15px;
   padding-right: 15px;
 }
