new start page look

--- a/app/assets/stylesheets/static_pages.css.less
+++ b/app/assets/stylesheets/static_pages.css.less
@@ -77,6 +77,58 @@ pre.prettyprint {
   text-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 0px;
 }
 
+.start-page-row {
+  display: table;
+}
+
+.start-page-cell {
+  float: none;
+  display: table-cell;
+  vertical-align: top;
+}
+
+.gps-tracks-label {
+  background-color: rgb(125, 166, 193);
+  color: white;
+}
+
+.gps-tracks-label:hover {
+  background-color: rgb(107, 145, 168);
+}
+
+.online-competitions-label {
+  background-color: rgb(63, 142, 191);
+  color: white;
+}
+
+.online-competitions-label:hover {
+  background-color: rgb(56, 126, 170);
+}
+
+.competitions-label {
+  background-color: rgb(61, 134, 170);
+  color: white;	
+}
+
+.competitions-label:hover {
+  background-color: rgb(53, 116, 147);
+}
+
+.btn-browse {
+  background-color: rgba(0, 0, 0, 0.15);	
+  color: white;
+  margin-bottom: 15px;
+}
+
+.overlay-link {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
 .how-it-works {
 
   background-clip: border-box;
