--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -7,30 +7,30 @@
   - else
     %span= 'Creating classic competitions available only for registered users.'
 
-  %h2= 'Online competitions:'
-  %ul.comp-list
-  - VirtualCompetition.order('id DESC').each do |comp|
-    %li.comp-list-item
-      .comp-list-params
-        %span.comp-jumps-kind= '#' + comp.jumps_kind
-        %span.comp-suit-kind= '#' + comp.suits_kind
-      %h3.comp-list-title
-        %a{href: virtual_competition_path(comp.id)}
-          - if comp.group
-            %span.comp-group= comp.group.name
-            %span.comp-dash= ' - '
-          %span.comp-name= comp.name
-      .comp-place
-        = 'Location: '
-        - if comp.place
-          %a{href: place_path(comp.place)}
-            -if comp.place.country
-              = comp.place.name + ', ' + comp.place.country.name
-            - else
-              = comp.place.name
-        - else
-          = 'Worldwide'
-      .comp-task= competition_task(comp)
+  -# %h2= 'Online competitions:'
+  -# %ul.comp-list
+  -# - VirtualCompetition.order('id DESC').each do |comp|
+  -#   %li.comp-list-item
+  -#     .comp-list-params
+  -#       %span.comp-jumps-kind= '#' + comp.jumps_kind
+  -#       %span.comp-suit-kind= '#' + comp.suits_kind
+  -#     %h3.comp-list-title
+  -#       %a{href: virtual_competition_path(comp.id)}
+  -#         - if comp.group
+  -#           %span.comp-group= comp.group.name
+  -#           %span.comp-dash= ' - '
+  -#         %span.comp-name= comp.name
+  -#     .comp-place
+  -#       = 'Location: '
+  -#       - if comp.place
+  -#         %a{href: place_path(comp.place)}
+  -#           -if comp.place.country
+  -#             = comp.place.name + ', ' + comp.place.country.name
+  -#           - else
+  -#             = comp.place.name
+  -#       - else
+  -#         = 'Worldwide'
+  -#     .comp-task= competition_task(comp)
 
   %h2= 'Classic competitions:'
   %ul.comp-list
