--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,8 +7,8 @@
       %ul.nav.navbar-nav
         %li
           = link_to t('application.header.tracks'), tracks_path
-        %li
-          = link_to t('application.header.competitions'), events_path
+        -# %li
+        -#   = link_to t('application.header.competitions'), events_path
            
       %ul.nav.navbar-nav.navbar-right
 
