--- a/app/views/virtual_competitions/index.html.haml
+++ b/app/views/virtual_competitions/index.html.haml
@@ -1,6 +1,6 @@
 .container
   .page-header
-    %h1= 'Virtual competitions'
+    %h1= 'Online competitions'
 
   %table#places-index.table.table-hover
     %thead
