--- a/app/views/virtual_comp_groups/index.html.haml
+++ b/app/views/virtual_comp_groups/index.html.haml
@@ -1,20 +1,22 @@
 - model_class = VirtualCompGroup
 .container
   .page-header
-    %h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+    %h1=t '.title', default: model_class.model_name.human.pluralize.titleize
   .top-buffer
     %table.table.table-striped
       %thead
         %tr
           %th= model_class.human_attribute_name(:id)
           %th= model_class.human_attribute_name(:name)
+          %th= model_class.human_attribute_name(:display_on_start_page)
           %th= model_class.human_attribute_name(:created_at)
-          %th=t '.actions', :default => t("helpers.actions")
+          %th=t '.actions', default: t("helpers.actions")
       %tbody
         - @virtual_comp_groups.each do |virtual_comp_group|
           %tr
             %td= virtual_comp_group.id
             %td= link_to virtual_comp_group.name, virtual_comp_group_path(virtual_comp_group)
+            %td= virtual_comp_group.display_on_start_page
             %td= virtual_comp_group.created_at
             %td
               = link_to t('.edit', :default => t("helpers.links.edit")),
