added logo for OpenGraph, added border for center block in index

--- a/app/assets/stylesheets/static_pages.css.less
+++ b/app/assets/stylesheets/static_pages.css.less
@@ -81,6 +81,10 @@ pre.prettyprint {
   display: table;
 }
 
+.text-darkgray {
+  color: rgb(85, 85, 85);	
+}
+
 .start-page-cell {
   float: none;
   display: table-cell;
@@ -98,6 +102,11 @@ pre.prettyprint {
 
 .online-competitions-label {
   background-color: rgb(63, 142, 191);
+  border-left-width: 1px;
+  border-left-style: solid;
+  border-right-width: 1px;
+  border-right-style: solid;
+  border-color: white;
   color: white;
 }
 
