--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,12 @@
     %title= page_title(yield(:title))
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = csrf_meta_tags
+
+    %meta{property: 'og:image', content: '/logo180.jpg'}
+    %meta{property: 'og:image:type', content: 'image/png'}
+    %meta{property: 'og:image:width', content: '180'}
+    %meta{property: 'og:image:height', content: '180'}
+
     -# %meta{name:"viewport", content:"width=980, height=device-height"}
   %body
     :javascript
