fix opengraph picture, change h2 style for skyderby-is blocks

--- a/app/assets/stylesheets/static_pages.css.less
+++ b/app/assets/stylesheets/static_pages.css.less
@@ -91,6 +91,12 @@ pre.prettyprint {
   vertical-align: top;
 }
 
+.start-page-cell h2 {
+  letter-spacing: 1px;
+  font-weight: 300;
+  text-shadow: rgba(0, 0, 0, 0.0980392) 2px 2px 1px;
+}
+
 .gps-tracks-label {
   background-color: rgb(125, 166, 193);
   color: white;
