--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,9 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = csrf_meta_tags
 
-    %meta{property: 'og:image', content: '/logo260.jpg'}
+    %meta{property: 'og:title', content: page_title(yield(:title))}
+    %meta{property: 'og:url', content: request.original_url}
+    %meta{property: 'og:image', content: 'https://skyderby.ru/logo260.jpg'}
     %meta{property: 'og:image:type', content: 'image/png'}
     %meta{property: 'og:image:width', content: '260'}
     %meta{property: 'og:image:height', content: '260'}
