--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,8 +7,8 @@
 
     %meta{property: 'og:title', content: page_title(yield(:title))}
     %meta{property: 'og:url', content: request.original_url}
-    %meta{property: 'og:image', content: asset_url('logo260.jpg')}
-    %meta{property: 'og:image:secure_url', content: asset_url('logo260.jpg')}
+    %meta{property: 'og:image', content: asset_url('logo260.png')}
+    %meta{property: 'og:image:secure_url', content: asset_url('logo260.png')}
     %meta{property: 'og:image:type', content: 'image/png'}
     %meta{property: 'og:image:width', content: '260'}
     %meta{property: 'og:image:height', content: '260'}
