display winner within panel instead well

--- a/app/assets/stylesheets/static_pages.css.less
+++ b/app/assets/stylesheets/static_pages.css.less
@@ -129,6 +129,19 @@ pre.prettyprint {
   background-color: rgb(53, 116, 147);
 }
 
+.panel-winner {
+  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px 0px, rgba(0, 0, 0, 0.117647) 0px 1px 6px 0px;
+  border-width: 0px;
+}
+
+.panel-winner .panel-heading {
+  border-bottom-width: 0px;
+}
+
+.light-header {
+  font-weight: 200;
+  letter-spacing: 1.3px;
+}
 .btn-browse {
   background-color: rgba(0, 0, 0, 0.15);	
   color: white;
