displaying track data in modal in event page, rendering sign_off for round and event

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -119,3 +119,24 @@ td:hover .delete-round
 [data-role="competitor-suit"] {
   color: rgb(153, 153, 153);
 }
+
+#result-gr-chart, 
+#result-spd-chart,
+#result-elev-chart {
+  width: 100%;
+}
+
+#result-gr-chart {
+  height: 250px;
+}
+
+#result-spd-chart,
+#result-elev-chart {
+  height: 350px;
+}
+
+#open-track-link {
+  opacity: 0.4;
+  color: black;
+  padding-right: 7px;
+}
