--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -24,10 +24,10 @@
       %ol#judges-list
 
 -# Modals
+= render 'show_result_modal'
 - if can? :update, @event
   = render 'event_settings_modal'
   = render 'competitor_modal'
   = render 'section_modal'
-  = render 'round_modal'
-  = render 'result_modal'
+  = render 'new_result_modal'
   = render 'progress_modal'
