--- a/app/views/events/_show_result_modal.html.haml
+++ b/app/views/events/_show_result_modal.html.haml
@@ -16,18 +16,104 @@
       .modal-body
         .container-fluid
           .row
-            .col-sm-12.text-right
+            .col-sm-12
+              .pull-right
+                %button.btn.btn-default.dropdown-toggle#dropdownMenu1{type: 'button', data: {toggle: 'dropdown'}}
+                  %i.fa.fa-cog
+                %ul.dropdown-menu.dropdown-menu-right{role: 'menu', aria: {labelledby: 'dropdownMenu1'}}
+                  %li.dropdown-header{role: 'presentation'}
+                    =t 'tracks.show.menu_header'
+                  %li#li_toggle_multi{role: 'presentation'}
+                    %a#toggle_multi{role: 'menuitem', tabindex: '-1', href: '#'}
+                      =t 'tracks.show.menu_sep'
+                  %li#li_toggle_single{role: 'presentation'}
+                    %a#toggle_single{role: 'menuitem', tabindex: '-1', href: '#'}
+                      =t 'tracks.show.menu_one'
+                  %li.dropdown-header{role: 'presentation'}
+                    =t 'tracks.show.units_header'
+                  %li#li_toggle_metric{role: 'presentation'}
+                    %a#toggle_metric{role: 'menuitem', tabindex: '-1', href: '#'}
+                      =t 'tracks.show.m_units_metric'
+                  %li#li_toggle_imperial{role: 'presentation'}
+                    %a#toggle_imperial{role: 'menuitem', tabindex: '-1', href: '#'}
+                      =t 'tracks.show.m_units_imperial'
+ 
           -# Header
           .row
-            .col-sm-3
-          -# Charts
-          .row#multiple-charts
             -# Loading spinner
             .col-sm-12.result-loading-spinner.text-center
               %hr
               %i.fa.fa-3x.fa-circle-o-notch.fa-spin
               .text-danger= 'Loading track data'
               %hr
+            .col-sm-12.col-md-11.col-md-offset-1
+              .col-md-4.col-sm-4.col-xs-6
+                .param-val
+                  .avg-val.fa-2x#dd_distance
+                  .dst-unit= t 'units.m'
+                .result-param
+                  %i.fa.fa-fw.fa.fa-arrows-h
+                  =t 'tracks.show.dt_dist'
+              .col-md-4.col-sm-4.col-xs-6
+                .param-val
+                  .avg-val.fa-2x#p_avg_h_speed
+                  .min-max.text-right
+                    .result-max-val
+                      %span#p_max_h_speed
+                      %i.fa.fa.fa-caret-up
+                    .result-min-val
+                      %span#p_min_h_speed
+                      %i.fa.fa.fa-caret-down.min-val-caret
+                  .spd-unit.fa=t 'units.kmh'
+                .result-param
+                  %i.fa.fa-fw.fa.fa-long-arrow-right
+                  =t 'tracks.show.dt_hspd'
+              .col-md-4.col-sm-4.col-xs-6
+                .param-val
+                  .avg-val.fa-2x#p_avg_gr
+                  .min-max.text-right
+                    .result-max-val
+                      %span#p_max_gr
+                      %i.fa.fa.fa-caret-up
+                    .result-min-val
+                      %span#p_min_gr
+                      %i.fa.fa.fa-caret-down.min-val-caret
+                .result-param
+                  %i.fa.fa-fw.fa.fa-ellipsis-h
+                  =t 'tracks.show.dt_gr'
+
+              .col-md-4.col-sm-4.col-xs-6
+                .param-val
+                  .avg-val.fa-2x#dd_elevation
+                  .dst-unit.fa= t 'units.m'
+                .result-param
+                  %i.fa.fa-fw.fa.fa-arrows-v
+                  =t 'tracks.show.dt_elev'
+              .col-md-4.col-sm-4.col-xs-6
+                .param-val
+                  .avg-val.fa-2x#p_avg_v_speed
+                  .min-max.text-right
+                    .result-min-val
+                      %span#p_max_v_speed
+                      %i.fa.fa.fa-caret-up
+                    .result-max-val
+                      %span#p_min_v_speed
+                      %i.fa.fa.fa-caret-down.min-val-caret
+                  .spd-unit= t 'units.kmh'
+                .result-param
+                  %i.fa.fa-fw.fa.fa-long-arrow-down
+                  =t 'tracks.show.dt_vspd'
+              .col-md-4.col-sm-4.col-xs-6
+                .param-val
+                  .avg-val.fa-2x#dd_fl_time
+                  .time-unit= t 'units.t_unit'
+                .result-param
+                  %i.fa.fa-fw.fa.fa-clock-o
+                  =t 'tracks.show.dt_dur'
+
+          %hr
+          -# Charts
+          .row#multiple-charts
             .col-sm-12
               #result-gr-chart
               #result-spd-chart
@@ -36,6 +122,7 @@
             .col-sm-12
               #result-all-data-chart
           .row
+            %hr
             %span.col-sm-2.control-label= t('events.show.track_upoaded') + ':'
             .col-sm-10
               %span#rm-track-uploaded
