layout adopted to ipad

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -44,6 +44,7 @@
 @border-radius-small:       1px;
 @nav-pills-border-radius:   4px;
 
+@nav-link-padding:          10px 10px;
 .modal-dialog {
   z-index: 1041;
 }
