--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,14 +1,21 @@
-.navbar.navbar-default.navbar-static-top{:role => 'navigation'}
-  .container
+.navbar.navbar-default.navbar-static-top{role: 'navigation'}
+  .container-fluid
     .navbar-header
+      %button.navbar-toggle.collapsed{type: 'button', data: {toggle: 'collapse', target: '#skyderby-navbar'}}
+        %span.sr-only= 'Toggle navigation'
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
       = link_to t('application.header.home'), root_url, :class => 'navbar-brand'
 
-    .navbar-collapse.collapse
+    .navbar-collapse.collapse#skyderby-navbar-collapse
       %ul.nav.navbar-nav
         %li
           = link_to t('application.header.tracks'), tracks_path
-        -# %li
-        -#   = link_to t('application.header.competitions'), events_path
+        %li
+          = link_to t('application.header.competitions'), events_path
+        %li
+          = link_to t('application.header.online_competitions'), virtual_competitions_path 
            
       %ul.nav.navbar-nav.navbar-right
 
