--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,12 +1,12 @@
 .navbar.navbar-default.navbar-static-top{role: 'navigation'}
   .container-fluid
     .navbar-header
-      %button.navbar-toggle.collapsed{type: 'button', data: {toggle: 'collapse', target: '#skyderby-navbar'}}
+      %button.navbar-toggle.collapsed{type: 'button', data: {toggle: 'collapse', target: '#skyderby-navbar-collapse'}}
         %span.sr-only= 'Toggle navigation'
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to t('application.header.home'), root_url, :class => 'navbar-brand'
+      = link_to t('application.header.home'), root_url, class: 'navbar-brand'
 
     .navbar-collapse.collapse#skyderby-navbar-collapse
       %ul.nav.navbar-nav
