--- a/app/views/virtual_competitions/show.html.haml
+++ b/app/views/virtual_competitions/show.html.haml
@@ -1,6 +1,6 @@
 - provide :title, competition_title(@competition)
 
-.container
+.container-fluid.online-comps-results-container
   .page-header
     .row
       .col-sm-10
@@ -8,11 +8,15 @@
           = competition_title(@competition)
         %div
           = t('virtual_competitions.place')
-          %a{href: place_path(@competition.place)}
-            -if @competition.place.country
-              = @competition.place.name + ', ' + @competition.place.country.name
-            - else
-              = @competition.place.name
+          - if @competition.place
+            %a{href: place_path(@competition.place)}
+              -if @competition.place.country
+                = @competition.place.name + ', ' + @competition.place.country.name
+              - else
+                = @competition.place.name
+          - else
+            = t('virtual_competitions.worldwide')
+
         %div= competition_suit
         %div= competition_task(@competition)
       .col-sm-2
