--- a/app/views/virtual_competitions/show.html.haml
+++ b/app/views/virtual_competitions/show.html.haml
@@ -1,6 +1,6 @@
 - provide :title, competition_title(@competition)
 
-.container-fluid.online-comps-results-container
+.container
   .page-header
     .row
       .col-sm-10
