--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,5 +1,5 @@
 .navbar.navbar-default.navbar-static-top{role: 'navigation'}
-  .container-fluid
+  .container
     .navbar-header
       %button.navbar-toggle.collapsed{type: 'button', data: {toggle: 'collapse', target: '#skyderby-navbar-collapse'}}
         %span.sr-only= 'Toggle navigation'
@@ -64,7 +64,10 @@
                       .form-group
                         = f.submit t('application.header.sign_in'), :class => 'btn btn-success btn-block'
                     = link_to t('application.header.forgot_pass'), new_password_path(:user)
-          %li
+                  %hr
+                  .col-sm-12.hidden-md
+                    = link_to t('application.header.sign_up'), new_user_registration_path
+          %li.hidden-sm
             = link_to t('application.header.sign_up'), new_user_registration_path
 
         - unless controller.controller_name.eql? 'track_select'
