fix issues with suit field and callback for process file

--- a/app/views/tracks/_new_track.html.haml
+++ b/app/views/tracks/_new_track.html.haml
@@ -34,7 +34,7 @@
             %span.col-sm-3.control-label
               = t('static_pages.index.track_form.suit')
             .col-sm-9
-              %select.new-track-wingsuit-select.suit-group{name: 'wingsuit_id'}
+              %select.new-track-wingsuit-select.suit-group{name: 'track[wingsuit_id]'}
               %input.form-control.suit-group{name: 'track[suit]', type: 'text', placeholder: 'Enter suit name'}
             .col-sm-9.col-sm-offset-3
               %span
