refactoring track charts view

--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -83,13 +83,13 @@
       #slider-range-selector
         %input#range-selector{type: 'text', name: 'range-selector' , value: ''}
 
-  #multiple-charts
+  #track-charts
     #glideratio_chart
     #speeds_chart
     #elevation_distance_chart
-
-  #single-chart
     #all_data_chart
+  #multiple-charts
+  #single-chart
 
   - if track.comment.present?
     %blockquote
