--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
     %meta{property: 'og:image:width', content: '260'}
     %meta{property: 'og:image:height', content: '260'}
 
+    = render 'layouts/favicon'
     -# %meta{name:"viewport", content:"width=980, height=device-height"}
   %body
     :javascript
