--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
     %meta{property: 'og:image:height', content: '260'}
 
     = render 'layouts/favicon'
+    = render 'layouts/google_analytics'
     -# %meta{name:"viewport", content:"width=980, height=device-height"}
   %body
     :javascript
